@@ -3,6 +3,8 @@
    Include stdlib.h for malloc and friends.
  - (dtucker) [configure.ac openbsd-compat/bsd-closefrom.c] Use F_CLOSEM fcntl
    for closefrom() on AIX.  Pointed out by William Ahern.
+ - (dtucker) [openbsd-compat/regress/{Makefile.in,closefromtest.c}] Regress
+   test for closefrom() in compat code.
 
 20060816
  - (djm) [audit-bsm.c] Sprinkle in some headers
@@ -5216,4 +5218,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4481 2006/08/17 09:35:49 dtucker Exp $
+$Id: ChangeLog,v 1.4482 2006/08/17 09:40:35 dtucker Exp $
